--- a/.gitmodules
+++ b/.gitmodules
@@ -1,27 +1,23 @@
 [submodule "dotbot"]
-	path = .dotbot
+    path = .dotbot
 	url = https://github.com/anishathalye/dotbot
-	ignore = dirty
+    ignore = dirty
 [submodule "vim/bundle/vim-colors-solarized"]
-	path = vim/pack/vendor/start/vim-colors-solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
-	ignore = untracked
+    path = vim/pack/vendor/start/vim-colors-solarized
+    url = https://github.com/altercation/vim-colors-solarized.git
 [submodule "vim/bundle/vim-scala"]
 	path = vim/pack/vendor/start/vim-scala
-	url = https://github.com/derekwyatt/vim-scala.git
-	ignore = untracked
+    url = https://github.com/derekwyatt/vim-scala.git
 [submodule "vim/bundle/vim-markdown"]
-	path = vim/pack/vendor/start/vim-markdown
-	url = https://github.com/tpope/vim-markdown
-	ignore = untracked
+    path = vim/pack/vendor/start/vim-markdown
+    url = https://github.com/tpope/vim-markdown
 [submodule "vim/bundle/vim-git"]
-	path = vim/pack/vendor/start/vim-git
-	url = https://github.com/tpope/vim-git.git
-	ignore = untracked
+    path = vim/pack/vendor/start/vim-git
+    url = https://github.com/tpope/vim-git.git
+    ignore = untracked
 [submodule "vim/bundle/vim-javascript"]
 	path = vim/pack/vendor/start/vim-javascript
 	url = https://github.com/pangloss/vim-javascript.git
-	ignore = untracked
 [submodule "vim/bundle/vim-fugitive"]
 	path = vim/pack/vendor/start/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
@@ -154,70 +150,6 @@
 	path = vim/pack/vendor/start/vim-racket
 	url = https://github.com/wlangstroth/vim-racket
 	ignore = untracked
-[submodule "emacs.d/vendor/use-package"]
-	path = emacs.d/vendor/use-package
-	url = https://github.com/jwiegley/use-package
-[submodule "emacs.d/vendor/PG"]
-	path = emacs.d/vendor/PG
-	url = https://github.com/ProofGeneral/PG
-[submodule "emacs.d/vendor/evil"]
-	path = emacs.d/vendor/evil
-	url = https://github.com/emacs-evil/evil
-[submodule "emacs.d/vendor/editorconfig-emacs"]
-	path = emacs.d/vendor/editorconfig-emacs
-	url = https://github.com/editorconfig/editorconfig-emacs
-[submodule "emacs.d/vendor/emacs-color-theme-solarized"]
-	path = emacs.d/vendor/emacs-color-theme-solarized
-	url = https://github.com/sellout/emacs-color-theme-solarized
-[submodule "emacs.d/vendor/fiplr"]
-	path = emacs.d/vendor/fiplr
-	url = https://github.com/grizzl/fiplr
-[submodule "emacs.d/vendor/grizzl"]
-	path = emacs.d/vendor/grizzl
-	url = https://github.com/grizzl/grizzl
-[submodule "emacs.d/vendor/packed"]
-	path = emacs.d/vendor/packed
-	url = https://github.com/tarsius/packed
-[submodule "emacs.d/vendor/dash.el"]
-	path = emacs.d/vendor/dash.el
-	url = https://github.com/magnars/dash.el
-[submodule "emacs.d/vendor/auto-compile"]
-	path = emacs.d/vendor/auto-compile
-	url = https://github.com/tarsius/auto-compile
-[submodule "emacs.d/vendor/emacs-neotree"]
-	path = emacs.d/vendor/emacs-neotree
-	url = https://github.com/jaypei/emacs-neotree
-[submodule "emacs.d/vendor/evil-leader"]
-	path = emacs.d/vendor/evil-leader
-	url = https://github.com/cofi/evil-leader
-[submodule "emacs.d/vendor/undo-tree"]
-	path = emacs.d/vendor/undo-tree
-	url = https://github.com/emacsmirror/undo-tree
-[submodule "emacs.d/vendor/company-mode"]
-	path = emacs.d/vendor/company-mode
-	url = https://github.com/company-mode/company-mode
-[submodule "emacs.d/vendor/linum-relative"]
-	path = emacs.d/vendor/linum-relative
-	url = https://github.com/coldnew/linum-relative
-[submodule "emacs.d/vendor/company-coq"]
-	path = emacs.d/vendor/company-coq
-	url = https://github.com/cpitclaudel/company-coq
-[submodule "emacs.d/vendor/company-math"]
-	path = emacs.d/vendor/company-math
-	url = https://github.com/vspinu/company-math
-[submodule "emacs.d/vendor/math-symbol-lists"]
-	path = emacs.d/vendor/math-symbol-lists
-	url = https://github.com/vspinu/math-symbol-lists
-[submodule "emacs.d/vendor/yasnippet"]
-	path = emacs.d/vendor/yasnippet
-	url = https://github.com/joaotavora/yasnippet
-	ignore = untracked
-[submodule "emacs.d/vendor/avy"]
-	path = emacs.d/vendor/avy
-	url = https://github.com/abo-abo/avy
-[submodule "emacs.d/vendor/evil-easymotion"]
-	path = emacs.d/vendor/evil-easymotion
-	url = https://github.com/PythonNut/evil-easymotion
 [submodule "zsh/plugins/dircolors-solarized"]
 	path = shell/plugins/dircolors-solarized
 	url = https://github.com/seebi/dircolors-solarized.git
@@ -227,15 +159,13 @@
 [submodule "zsh/plugins/zsh-completions"]
 	path = zsh/plugins/zsh-completions
 	url = https://github.com/zsh-users/zsh-completions
+[submodule "zsh/plugins/zsh-autosuggestions"]
+	path = zsh/plugins/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions 
 [submodule "irssi/scripts/vendor/irssi-smartfilter"]
 	path = irssi/scripts/vendor/irssi-smartfilter
 	url = https://github.com/lifeforms/irssi-smartfilter
 [submodule "jupyter/nbextensions/jupyter-vim-binding"]
 	path = jupyter/nbextensions/jupyter-vim-binding
 	url = https://github.com/lambdalisue/jupyter-vim-binding
-[submodule "emacs.d/vendor/racket-mode"]
-	path = emacs.d/vendor/racket-mode
-	url = https://github.com/greghendershott/racket-mode
-[submodule "emacs.d/vendor/evil-surround"]
-	path = emacs.d/vendor/evil-surround
-	url = https://github.com/emacs-evil/evil-surround
+
