--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,10 @@ bind c new-window -c "#{pane_current_path}"
 bind "\"" split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# new window splits
+bind | split-window -h
+bind - split-window -v
+
 # enable and disable keyboard input for panes
 bind < select-pane -d \; display-message "input disabled"
 bind > select-pane -e \; display-message "input enabled"
@@ -34,6 +38,8 @@ setw -g aggressive-resize on
 
 # enable mouse control
 set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # start window numbers at 1 to match keyboard order with tmux order
 set -g base-index 1
@@ -77,7 +83,7 @@ bind C-k clear-history \; display-message "history cleared"
 bind @ command-prompt -p "create pane from:" "join-pane -s ':%%'"
 
 # reload the .tmux.conf file with Ctrl-r
-bind C-r source-file ~/.tmux.conf \; display-message "configuration reloaded"
+bind C-t source-file ~/.tmux.conf \; display-message "configuration reloaded"
 
 # toggle passthrough of prefix
 bind P if-shell "[ \"$(tmux show-options -g prefix)\" = \"prefix C-a\" ]" '\
@@ -105,3 +111,10 @@ setw -g clock-mode-colour colour64 #green
 
 # Allow local customization in ~/.tmux_local.conf
 if-shell "[ -f ~/.tmux_local.conf ]" 'source ~/.tmux_local.conf'
+
+# copy-mode pane switching
+#bind-key -T copy-mode-vi 'C-h' select-pane -L
+#bind-key -T copy-mode-vi 'C-j' select-pane -D
+#bind-key -T copy-mode-vi 'C-k' select-pane -U
+#bind-key -T copy-mode-vi 'C-l' select-pane -R
+#bind-key -T copy-mode-vi 'C-\' select-pane -l
